--- a/README.adoc
+++ b/README.adoc
@@ -305,7 +305,7 @@ Edit the `PropertiesResource` class.
 `start/src/main/java/io/openliberty/guides/rest/PropertiesResource.java`
 ----
 
-Change the endpoint of your application from [hotspot=18]`properties` to `properties-new` by changing the `@Path`
+Change the endpoint of your application from `properties` to `properties-new` by changing the [hotspot=18]`@Path`
 annotation to `"properties-new"`.
 
 To see these changes reflected in the container, run the following command from the command line to
