--- a/README.adoc
+++ b/README.adoc
@@ -18,6 +18,7 @@
 :page-permalink: /guides/{projectid}
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master
 :source-highlighter: prettify
+:guide-author: Open Liberty
 = Using Docker containers to develop microservices
 
 [.hidden]
@@ -337,7 +338,7 @@ include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java
 
 == Great work! You're done!
 
-You containerized a simple REST application. You can now continuously deliver changes to the application,
+You containerized a simple REST application in Open Liberty. You can now continuously deliver changes to the application,
 and they will reflect automatically when the application rebuilds.
 
 
