--- a/README.adoc
+++ b/README.adoc
@@ -100,7 +100,7 @@ Before you begin, build your application. To do this, navigate to the `start` di
 mvn clean install
 ```
 
-Your [hotspot=1-228]`pom.xml` file is already configured to add your REST application to the `defaultServer`. But you can tweak this configuration or add your own for another server by updating the [hotspot=181-192]`<execution/>` element.
+Your [hotspot]`pom.xml` file is already configured to add your REST application to the `defaultServer`. But you can tweak this configuration or add your own for another server by updating the [hotspot=181-192]`<execution/>` element.
 
 Learn more about this goal on the official https://github.com/WASdev/ci.maven/blob/master/docs/install-apps.md[Maven Liberty plug-in repository].
 
@@ -312,7 +312,7 @@ annotation to `"properties-new"`.
 
 
 To see these changes reflected in the container, run the following command from the command line to
-rebuild your application and point your browser to `http://localhost:9080/LibertyProject/System/properties-new`.
+rebuild your application and point your browser to http://localhost:9080/LibertyProject/System/properties-new.
 [role='command']
 ```
 mvn package
