--- a/README.adoc
+++ b/README.adoc
@@ -298,7 +298,7 @@ CONTAINER ID        IMAGE               CREATED             STATUS              
 
 To view a full list of all available containers, run the `docker ps -a` command from the command line.
 
-If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties,
+If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties[http://localhost:9080/LibertyProject/System/properties^],
 where you can see a JSON file that contains the system properties of the JVM in your container.
 [role="code_command hotspot=18", subs="quotes"]
 ----
@@ -312,7 +312,7 @@ annotation to `"properties-new"`.
 
 
 To see these changes reflected in the container, run the following command from the command line to
-rebuild your application and point your browser to http://localhost:9080/LibertyProject/System/properties-new.
+rebuild your application and point your browser to http://localhost:9080/LibertyProject/System/properties-new[http://localhost:9080/LibertyProject/System/properties-new^].
 [role='command']
 ```
 mvn package
