Update arrows should not highlight code

--- a/README.adoc
+++ b/README.adoc
@@ -313,7 +313,7 @@ To view a full list of all available containers, run the `docker ps -a` command 
 
 If your container is running without problems, point your browser to http://localhost:9080/LibertyProject/System/properties[http://localhost:9080/LibertyProject/System/properties^],
 where you can see a JSON file that contains the system properties of the JVM in your container.
-[role="code_command hotspot=18", subs="quotes"]
+[role="code_command hotspot", subs="quotes"]
 ----
 #Update the `PropertiesResource` class.#
 `src/main/java/io/openliberty/guides/rest/PropertiesResource.java`
