Change the guide attribution to point to master

--- a/README.adoc
+++ b/README.adoc
@@ -358,4 +358,4 @@ and they will reflect automatically when the application rebuilds.
 
 
 
-include::https://raw.githubusercontent.com/OpenLiberty/guides-common/multipane/attribution.adoc[subs="attributes"]
+include::{common-includes}/attribution.adoc[subs="attributes"]
