--- a/README.adoc
+++ b/README.adoc
@@ -137,16 +137,19 @@ In this case, you're using the `openliberty/open-liberty:javaee8` image as your 
 image, which comes with the latest Open Liberty runtime.
 
 
-The [hotspot=5 file=0]`RUN` instruction executes various shell commands in a new layer on top of the current image.
+The [hotspot=6 file=0]`RUN` instruction executes various shell commands in a new layer on top of the current image.
 In this case, you create a symlink between the `/opt/ol/wlp/usr/servers` directory and the `/servers`
 directory. This way, you can mount your servers more easily because you don't need to use long path names.
+Note that since the Open Liberty Docker image runs by default with user `1001` (which is a non-root user),
+we must temporarily switch to the `root` user to create the symlink. This is done by using 
+the [hotspot=4 hotspot=7 file=0]`USER` instruction. 
 
-The [hotspot=8 file=0]`ENTRYPOINT` and [hotspot=9]`CMD` instructions define a default command that executes when the image runs as
-a container. These two instructions function the same way, except that the [hotspot=9 file=0]`CMD` instruction is overridden
+The [hotspot=10 file=0]`ENTRYPOINT` and [hotspot=9]`CMD` instructions define a default command that executes when the image runs as
+a container. These two instructions function the same way, except that the [hotspot=11 file=0]`CMD` instruction is overridden
 with any arguments that are passed at the end of the `docker run` command. In contrast, the
-[hotspot=8 file=0]`ENTRYPOINT` instruction requires the `--entrypoint` flag to be overridden. In this case, you use
-the [hotspot=8 file=0]`ENTRYPOINT` instruction to start an Open Liberty server and the [hotspot=9 file=0]`CMD` instruction to indicate
-which server to start. Because the [hotspot=9 file=0]`CMD` instruction is easily overridden, starting any server is convenient.
+[hotspot=10 file=0]`ENTRYPOINT` instruction requires the `--entrypoint` flag to be overridden. In this case, you use
+the [hotspot=10 file=0]`ENTRYPOINT` instruction to start an Open Liberty server and the [hotspot=11 file=0]`CMD` instruction to indicate
+which server to start. Because the [hotspot=11 file=0]`CMD` instruction is easily overridden, starting any server is convenient.
 
 For a complete list of available instructions, see the https://docs.docker.com/engine/reference/builder[Docker documentation^].
 
