Use -u flag on linux

--- a/README.adoc
+++ b/README.adoc
@@ -26,6 +26,10 @@ NOTE: This repository contains the guide documentation source. To view the guide
 
 Learn how to containerize a microservice with Docker for iterative development
 
+:linux: LINUX
+:win: WINDOWS
+:mac: MAC
+
 // =================================================================================================
 // Introduction
 // =================================================================================================
@@ -261,18 +265,42 @@ Learn more about the image build process on the https://docs.docker.com/engine/r
 == Containerize your application
 
 Now that your image is built, execute the Docker `run` command with the absolute path to this guide:
+****
+[system]#*{win} | {mac}*#
 
 [role='command']
 ```
 docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers:/servers ol-runtime
 ```
 
+[system]#*{linux}*#
+
+We use the `-u` flag to override the default user within the container to match the user 
+id on your host machine. This is to ensure the default user has correct permissions to the 
+server directory. 
+
+[role='command']
+```
+docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers:/servers -u `id -u` ol-runtime
+```
+****
+
 Alternatively, you can also execute the `run` command to mount a single server instead of the whole `servers` directory:
 [role='command']
+
+****
+[system]#*{win} | {mac}*#
 ```
 docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers/defaultServer:/servers/defaultServer ol-runtime
 ```
 
+[system]#*{linux}*#
+
+[role='command']
+```
+docker run -d --name rest-app -p 9080:9080 -p 9443:9443 -v <absolute path to guide>/start/target/liberty/wlp/usr/servers/defaultServer:/servers/defaultServer -u `id -u` ol-runtime
+```
+****
 Let's break down the flags:
 
 [cols="15, 100", options="header"]
