--- a/README.adoc
+++ b/README.adoc
@@ -274,7 +274,7 @@ Now that your image is built, execute the Docker `run` command with the absolute
 //`*LINUX*`
 
 [role='command']
-include::{common-includes}/test.adoc[]
+include::{common-includes}/os-tabs.adoc[]
 
 [.tab_content.windows_section.mac_section]
 --
