--- a/README.adoc
+++ b/README.adoc
@@ -163,7 +163,7 @@ For a complete list of available instructions, see the https://docs.docker.com/e
 Dockerfile
 [source, text, linenums, role="code_column"]
 ----
-include::finish/Dockerfile[tags=**]
+include::finish/Dockerfile[]
 ----
 
 === Optional: Writing a .dockerignore file
@@ -179,13 +179,13 @@ directory, the [hotspot file=1]`pom.xml` file, and some system files. Feel free 
 `.dockerignore`
 [source, text, linenums, role="code_column"]
 ----
-include::finish/.dockerignore[tags=**]
+include::finish/.dockerignore[]
 ----
 
 pom.xml
 [source, xml, linenums, role="code_column"]
 ----
-include::finish/pom.xml[tags=**]
+include::finish/pom.xml[]
 ----
 // =================================================================================================
 // Building the image
@@ -388,9 +388,9 @@ find the cause of the issue, remove the faulty container with the `docker rm res
 your image, and start the container again.
 
 PropertiesResource.java
-[source, Java, linenums, role="code_column"]
+[source, Java, linenums, role='code_column hide_tags=comment']
 ----
-include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=**;!comment]
+include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[]
 ----
 
 == Great work! You're done!
