--- a/README.adoc
+++ b/README.adoc
@@ -114,7 +114,7 @@ Learn more about this goal on the official https://github.com/WASdev/ci.maven/bl
 pom.xml
 [source, xml, linenums, role="code_column"]
 ----
-include::finish/pom.xml[tags=**]
+include::finish/pom.xml[]
 ----
 
 // =================================================================================================
